--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 data
 .ipynb_checkpoints
-!horses_jul_wins/.gitkeep 
+horses_jul_wins
 __pycache__
 tom
 utils/config.py
 utils/x_train_df.csv
 utils/y_train_df.csv
+hare.md
